# amazon-cli

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/assets/: site.css  site.js  site.more.css
src/amazon_cli/: __init__.py  __main__.py  cli.py  output.py
src/amazon_cli/client/: base.py  parser.py  product.py  search.py  types.py
src/amazon_cli/commands/: compare.py  product.py  reviews.py  search.py
