[project]
name = "amazon-cli"
version = "0.1.0"
description = "Amazon.in in your terminal -- search products, compare prices, view details, and read reviews."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sunil" }]
keywords = ["amazon", "cli", "terminal", "shopping", "price-compare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "httpx[http2]>=0.27",
    "rich>=13.0",
    "selectolax>=0.3",
]

[project.scripts]
amz = "amazon_cli:main"

[project.urls]
Homepage = "https://github.com/sunil-dhaka/amazon-cli"
Repository = "https://github.com/sunil-dhaka/amazon-cli"
Issues = "https://github.com/sunil-dhaka/amazon-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_cli"]
